feat: add build on push

--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -1,9 +1,10 @@
 name: IOS Production Build
 
-on:
-  workflow_dispatch:
-  release:
-    types: [published] # only run the workflow when a new release has been published
+on: [push]
+# on:
+  # workflow_dispatch:
+  # release:
+    # types: [published] # only run the workflow when a new release has been published
 
 jobs:
   ios-build:
