--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -52,7 +52,9 @@ jobs:
             ${{ runner.os }}-pods-
 
       - name: Install Pods
-        run: cd ios && pod install --repo-update && cd ..
+        run: |
+            echo "Current directory: $(pwd)"
+            cd ios && pod install --repo-update && cd ..
 
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.4.0
