--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Install Pods
         run: |
             echo "Current directory: $(pwd)"
-            cd ios && pod install --repo-update && cd ..
+            pod install --repo-update && cd ..
 
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.4.0
