create new ci/cd for ios

--- a/.github/workflows/ios_build_old.yml
+++ b/.github/workflows/ios_build_old.yml
@@ -1,11 +1,9 @@
 name: IOS Production Build
 
-on: [push]
-# on:
-  # workflow_dispatch:
-  # release:
-    # types: [published] # only run the workflow when a new release has been published
-
+on:
+  push:
+    branches:
+      - test
 jobs:
   ios-build:
     name: IOS Production Build
