--- a/.github/workflows/ios_build_old.yml
+++ b/.github/workflows/ios_build_old.yml
@@ -73,3 +73,10 @@ jobs:
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+
+      # - name: Clean up keychain and provisioning profile
+        #   if: ${{ always() }}
+        #   run: |
+        #     security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
+        #     rm ~/Library/MobileDevice/Provisioning\ Profiles/dist_pp.mobileprovision
+        #     rm ~/Library/MobileDevice/Provisioning\ Profiles/dist_pp_adc.mobileprovision
