--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -85,7 +85,7 @@ jobs:
             EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
             echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
             xcodebuild -exportArchive \
-            -archivePath $RUNNER_TEMP/weatherApp.xcarchive \
+            -archivePath $RUNNER_TEMP/WeatherApp.xcarchive \
             -exportOptionsPlist $EXPORT_OPTS_PATH \
             -exportPath $RUNNER_TEMP/build                    
   
@@ -97,3 +97,9 @@ jobs:
             # you can also archive the entire directory 
             # path: ${{ runner.temp }}/build
             retention-days: 3
+        
+        - name: Clean up keychain and provisioning profile
+          if: ${{ always() }}
+          run: |
+            security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
+            rm ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision
