--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -80,7 +80,10 @@ jobs:
             cd ios
             pod install --repo-update && cd ..        
   
-        - name: build archive
+        - name: Build archive
+          env:
+            BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
+            PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
           run: |
             xcodebuild -workspace ios/WeatherApp.xcworkspace \
             -scheme "WeatherApp" \
@@ -88,9 +91,13 @@ jobs:
             -configuration Debug \
             -destination generic/platform=iOS \
             -archivePath $RUNNER_TEMP/WeatherApp.xcarchive \
-            archive          
+            archive \
+            PROVISIONING_STYLE="Manual" \
+            PROVISIONING_PROFILE={$PROVISION_PROFILES_BASE64} \ 
+            CODE_SIGN_STYLE="Manual" \
+            CODE_SIGN_IDENTITY={$BUILD_CERTIFICATE_BASE64} \
   
-        - name: export ipa
+        - name: Export ipa
           env:
             EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
           run: |
