--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -2,24 +2,23 @@ name: IOS Production Build
 
 on: [push]
 
+env:
+    BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
+    P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+    PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
+    KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+    EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
+
 jobs:
   ios-build:
     name: IOS Production Build
     runs-on: macOS-latest
-    # defaults:
-    #   run:
-    #     working-directory: ios
 
     steps:
         - name: checkout repository
           uses: actions/checkout@v3
   
         - name: Install the Apple certificate and provisioning profile
-          env:
-            BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
-            P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-            PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
-            KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
           run: |
             # create variables
             CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
@@ -81,25 +80,19 @@ jobs:
             pod install --repo-update && cd ..        
   
         - name: Build archive
-          env:
-            BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
-            PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
           run: |
             xcodebuild -workspace ios/WeatherApp.xcworkspace \
             -scheme "WeatherApp" \
             -sdk iphoneos \
             -configuration Debug \
             -destination generic/platform=iOS \
-            -archivePath $RUNNER_TEMP/WeatherApp.xcarchive \
-            archive -allowProvisioningUpdates
+            archive -archivePath $RUNNER_TEMP/WeatherApp.xcarchive -allowProvisioningUpdates
             PROVISIONING_STYLE="Manual" \
             PROVISIONING_PROFILE={$PROVISION_PROFILES_BASE64} \ 
             CODE_SIGN_STYLE="Manual" \
-            CODE_SIGN_IDENTITY={$BUILD_CERTIFICATE_BASE64} \
+            CODE_SIGN_IDENTITY={$BUILD_CERTIFICATE_BASE64}
   
         - name: Export ipa
-          env:
-            EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
           run: |
             EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
             echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
