--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,6 +1,10 @@
 name: IOS Production Build
 
-on: [push]
+# on: [push]
+on:
+    push:
+        branches:
+            - test
 
 env:
     BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
@@ -8,112 +12,138 @@ env:
     PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
     KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
     EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
+    APP_NAME_STAGING: ${{ 'medev-weather-app/ENV_STAGING' }}
+    TESTING_GROUP_STAGING: ${{ 'ENV_STAGING' }}
+    ARTIFACT_NAME: ${{ 'app_artifact' }}
 
 jobs:
-  ios-build:
-    name: IOS Production Build
-    runs-on: macOS-latest
+    ios-build:
+        name: IOS Production Build
+        runs-on: macOS-latest
 
-    steps:
-        - name: checkout repository
-          uses: actions/checkout@v3
+        steps:
+            - name: checkout repository
+              uses: actions/checkout@v3
   
-        - name: Install the Apple certificate and provisioning profile
-          run: |
-            # create variables
-            CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-            PP_ARCHIVE=$RUNNER_TEMP/mobile_pp.mobileprovision
-            KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+            - name: Install the Apple certificate and provisioning profile
+              run: |
+                # create variables
+                CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+                PP_ARCHIVE=$RUNNER_TEMP/mobile_pp.mobileprovision
+                KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+    
+                # import certificate and provisioning profile from secrets
+                echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+                echo -n "$PROVISION_PROFILES_BASE64" | base64 --decode -o $PP_ARCHIVE
+    
+                # create temporary keychain
+                security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+                security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+                security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+    
+                # import certificate to keychain
+                security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+                security list-keychain -d user -s $KEYCHAIN_PATH
+    
+                # extract and copy provisioning profile(s)
+                mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+                for PROVISION in `ls $RUNNER_TEMP/*.mobileprovision`
+                do
+                UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i $PROVISION)`
+                cp $PROVISION ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
+                done
+                
+                # echo some output
+                security find-identity -v -p codesigning
+                ls -l ~/Library/MobileDevice/Provisioning\ Profiles          
   
-            # import certificate and provisioning profile from secrets
-            echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
-            echo -n "$PROVISION_PROFILES_BASE64" | base64 --decode -o $PP_ARCHIVE
+            - uses: actions/setup-node@v3
+              with:
+                    node-version: '18'
+                    cache: 'yarn'
   
-            # create temporary keychain
-            security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-            security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-            security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-  
-            # import certificate to keychain
-            security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-            security list-keychain -d user -s $KEYCHAIN_PATH
-  
-            # extract and copy provisioning profile(s)
-            mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-            for PROVISION in `ls $RUNNER_TEMP/*.mobileprovision`
-            do
-              UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i $PROVISION)`
-              cp $PROVISION ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
-            done
+            - name: Enable Corepack
+              run: corepack enable
+    
+            - name: install yarn dependencies
+              run:  |
+                yarn install --frozen-lockfile --network-timeout 300000
+
+            - name: Restore Pods cache
+              uses: actions/cache@v2
+              with:
+                path: |
+                    ios/Pods
+                    ~/Library/Caches/CocoaPods
+                    ~/.cocoapods
+                    key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+                    restore-keys: |
+                    ${{ runner.os }}-pods-
+
+            - name: Install Pods
+              run: |
+                echo "Current directory: $(pwd)"
+                cd ios
+                pod install --repo-update && cd ..        
+    
+            - name: Build archive
+              run: |
+                xcodebuild -workspace ios/WeatherApp.xcworkspace \
+                -scheme "WeatherApp" \
+                -sdk iphoneos \
+                -configuration Debug \
+                -destination generic/platform=iOS \
+                archive -archivePath $RUNNER_TEMP/WeatherApp.xcarchive 
+
+            - name: Export ipa
+              run: |
+                EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
+                echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
+                xcodebuild -exportArchive \
+                -archivePath $RUNNER_TEMP/WeatherApp.xcarchive \
+                -exportOptionsPlist $EXPORT_OPTS_PATH \
+                -exportPath $RUNNER_TEMP/build                    
+    
+            - name: Upload application
+              uses: actions/upload-artifact@v3
+              with:
+                name: app_artifact
+                path: ${{ runner.temp }}/build/WeatherApp.ipa
+                # you can also archive the entire directory 
+                # path: ${{ runner.temp }}/build
+                retention-days: 3
             
-            # echo some output
-            security find-identity -v -p codesigning
-            ls -l ~/Library/MobileDevice/Provisioning\ Profiles          
-  
-        - uses: actions/setup-node@v3
+            - name: Clean up keychain and provisioning profile
+              if: ${{ always() }}
+              run: |
+                security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
+                rm ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision
+
+    deploy:
+        needs: [ios-build]
+        if: success()
+        name: Deploy
+        runs-on: ubuntu-latest
+
+        steps:
+
+        - uses: actions/checkout@master
+            
+        - uses: actions/actions/download-artifact@v3
           with:
-            node-version: '18'
-            cache: 'yarn'
-  
-        - name: Enable Corepack
-          run: corepack enable
-  
-        - name: install yarn dependencies
-          run:  |
-            yarn install --frozen-lockfile --network-timeout 300000
-
-        - name: Restore Pods cache
-          uses: actions/cache@v2
+            name: ${{ env.ARTIFACT_NAME }}
+            
+        - name: set up JDK 1.8
+          uses: actions/setup-java@v1
           with:
-            path: |
-              ios/Pods
-              ~/Library/Caches/CocoaPods
-              ~/.cocoapods
-            key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-pods-
+            java-version: 1.8
 
-        - name: Install Pods
-          run: |
-            echo "Current directory: $(pwd)"
-            cd ios
-            pod install --repo-update && cd ..        
-  
-        - name: Build archive
-          run: |
-            xcodebuild -workspace ios/WeatherApp.xcworkspace \
-            -scheme "WeatherApp" \
-            -sdk iphoneos \
-            -configuration Debug \
-            -destination generic/platform=iOS \
-            archive -archivePath $RUNNER_TEMP/WeatherApp.xcarchive 
-
-        - name: Export ipa
-          run: |
-            EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
-            echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
-            xcodebuild -exportArchive \
-            -archivePath $RUNNER_TEMP/WeatherApp.xcarchive \
-            -exportOptionsPlist $EXPORT_OPTS_PATH \
-            -exportPath $RUNNER_TEMP/build                    
-  
-        - name: Upload application
-          uses: actions/upload-artifact@v3
+        - name: Upload to App Center STAGING
+          uses: wzieba/AppCenter-Github-Action@v1
           with:
-            name: app_artifact
-            path: ${{ runner.temp }}/build/WeatherApp.ipa
-            # you can also archive the entire directory 
-            # path: ${{ runner.temp }}/build
-            retention-days: 3
-        
-        - name: Clean up keychain and provisioning profile
-          if: ${{ always() }}
-          run: |
-            security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
-            rm ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision
-
-# -allowProvisioningUpdates
-# PROVISIONING_STYLE="Manual" \
-# PROVISIONING_PROFILE={$PROVISION_PROFILES_BASE64} \ 
-# CODE_SIGN_STYLE="Manual" \
-# CODE_SIGN_IDENTITY={$BUILD_CERTIFICATE_BASE64}
+            appName: ${{ env.APP_NAME_STAGING }}
+            token: ${{ env.APP_CENTER_TOKEN_STAGING }}
+            group: ${{ env.TESTING_GROUP_STAGING }}
+            file: ${{ runner.temp }}/build/WeatherApp.ipa
+            notifyTesters: true
+            debug: false
