--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -1,4 +1,4 @@
-name: Deployment-test
+name: Deployment IOS
 
 on: [push]
 
@@ -9,7 +9,7 @@ env:
     ARTIFACT_NAME: ${{ 'app_artifact' }}
 
 jobs:
-    deploy:
+    deploy-ios:
         name: Deploy
         runs-on: ubuntu-latest
 
