--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
     deploy-ios:
-        name: Deploy
+        name: Deploy IOS
         runs-on: ubuntu-latest
 
         steps:
@@ -18,7 +18,7 @@ jobs:
           uses: actions/checkout@v3
           
         - name: download artifact 
-          uses: actions/actions/download-artifact@v3
+          uses: actions/download-artifact@v3
           with:
             name: ${{ env.ARTIFACT_NAME }}
             
