--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -31,6 +31,8 @@ jobs:
             
 
     deploy-ios:
+        needs: [build-test]
+        if: success()
         name: Deploy IOS
         runs-on: ubuntu-latest
 
@@ -54,6 +56,7 @@ jobs:
             appName: ${{ env.APP_NAME_STAGING }}
             token: ${{ env.APP_CENTER_TOKEN_STAGING }}
             group: ${{ env.TESTING_GROUP_STAGING }}
-            file: ${{ runner.temp }}/build/WeatherApp.ipa
+            # file: ${{ runner.temp }}/build/WeatherApp.ipa
+            file: dummy.txt
             notifyTesters: true
             debug: false
