--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -1,6 +1,10 @@
 name: Deployment IOS
 
-on: [push]
+# on: [push]
+on:
+    push:
+        branches:
+            - test
 
 env:
     APP_NAME_STAGING: ${{ 'medev-weather-app/ENV_STAGING' }}
@@ -25,7 +29,7 @@ jobs:
             - name: Upload application
               uses: actions/upload-artifact@v3
               with:
-                name: app_artifact
+                name: ${{ env.ARTIFACT_NAME }}
                 path: dummy.ipa
                 retention-days: 3
             
