--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -135,6 +135,10 @@ jobs:
           uses: actions/download-artifact@v3
           with:
             name: ${{ env.ARTIFACT_NAME }}
+            path: ${{ runner.temp }}/build
+
+        - name: Display structure of download files
+          run: ls -R ${{ runner.temp }}/build
             
         - name: set up JDK 1.8
           uses: actions/setup-java@v1
