--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -7,6 +7,11 @@ on: [push]
 #             - test
 
 env:
+    ARCHIVE_PATH: ${{ 'build/WeatherApp.xcarchive' }}
+    # ARTIFACT_PATH_STAGING: ${{ 'staging/' }}
+    EXPORT_PATH_STAGING: ${{ 'staging/' }}
+    UPLOAD_FILE_STAGING: ${{ 'staging/WeatherApp.ipa' }}
+    ARTIFACT_NAME: ${{ 'app_artifact' }}
     BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
     P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
     PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
@@ -15,7 +20,6 @@ env:
     APP_NAME_STAGING: ${{ 'medev-weather-app/ENV_STAGING' }}
     APP_CENTER_TOKEN_STAGING: ${{ secrets.APP_CENTER_TOKEN_STAGING}}
     TESTING_GROUP_STAGING: ${{ 'ENV_STAGING' }}
-    ARTIFACT_NAME: ${{ 'app_artifact' }}
 
 jobs:
     ios-build:
@@ -85,7 +89,11 @@ jobs:
               run: |
                 echo "Current directory: $(pwd)"
                 cd ios
-                pod install --repo-update && cd ..        
+                pod install --repo-update
+                
+            - name: Create build folder
+              run: |
+                mkdir -p build && mkdir -p staging && mkdir -p prod
     
             - name: Build archive
               run: |
@@ -94,22 +102,25 @@ jobs:
                 -sdk iphoneos \
                 -configuration Debug \
                 -destination generic/platform=iOS \
-                archive -archivePath $RUNNER_TEMP/WeatherApp.xcarchive 
+                archive -archivePath $ARCHIVE_PATH
+            
+# archive -archivePath $RUNNER_TEMP/WeatherApp.xcarchive
 
             - name: Export ipa
               run: |
                 EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
                 echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
                 xcodebuild -exportArchive \
-                -archivePath $RUNNER_TEMP/WeatherApp.xcarchive \
+                -archivePath $ARCHIVE_PATH \
                 -exportOptionsPlist $EXPORT_OPTS_PATH \
-                -exportPath $RUNNER_TEMP/build                    
+                -exportPath $EXPORT_PATH_STAGING                 
     
             - name: Upload application
               uses: actions/upload-artifact@v3
               with:
                 name: ${{ env.ARTIFACT_NAME }}
-                path: ${{ runner.temp }}/build/WeatherApp.ipa
+                path: ${{ env.EXPORT_PATH_STAGING }}
+                # path: ${{ runner.temp }}/build/WeatherApp.ipa
                 # you can also archive the entire directory 
                 # path: ${{ runner.temp }}/build
                 retention-days: 3
@@ -135,7 +146,7 @@ jobs:
           uses: actions/download-artifact@v3
           with:
             name: ${{ env.ARTIFACT_NAME }}
-            path: ${{ runner.temp }}/build
+            # path: ${{ runner.temp }}/build
 
         - name: Display structure of download files
           run: ls -R ${{ runner.temp }}/build
@@ -151,6 +162,7 @@ jobs:
             appName: ${{ env.APP_NAME_STAGING }}
             token: ${{ env.APP_CENTER_TOKEN_STAGING }}
             group: ${{ env.TESTING_GROUP_STAGING }}
-            file: ${{ runner.temp }}/build/WeatherApp.ipa
+            # file: ${{ runner.temp }}/build/WeatherApp.ipa
+            file: ${{ env.UPLOAD_FILE_STAGING }}
             notifyTesters: true
             debug: false
