--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -135,7 +135,7 @@ jobs:
     deploy-app-center:
         needs: [ios-build]
         if: success()
-        uses: ./github/workflows/deployAppCenter.yml
+        uses: ./.github/workflows/deployAppCenter.yml
         # runs-on: ubuntu-latest
 
         # steps:
