--- a/.github/workflows/buildIOS.yml
+++ b/.github/workflows/buildIOS.yml
@@ -18,9 +18,9 @@ env:
     ARCHIVE_PATH: ${{ 'build/WeatherApp.xcarchive' }}
     EXPORT_PATH_STAGING: ${{ 'staging/' }}
     ARTIFACT_NAME: ${{ 'app_artifact' }}
-    BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
-    P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-    PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
+    BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+    P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+    PROVISION_PROFILES_BASE64: ${{ secrets.PROVISION_PROFILES_BASE64 }}
     KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
     EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
 
