--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,18 +3,27 @@ name: IOS Production Build
 on: [push]
 
 jobs:
-    build-ios:
-        uses: ./.github/workflows/buildIOS.yml
-        secrets:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
-          P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-          EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
+    # build-ios:
+    #     uses: ./.github/workflows/buildIOS.yml
+    #     secrets:
+    #       BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64 }}
+    #       P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+    #       PROVISION_PROFILES_BASE64: ${{ secrets.IOS_MOBILE_PROVISION_BASE64 }}
+    #       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+    #       EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
 
-    deploy-app-center:
-        needs: [build-ios]
-        if: success()
-        uses: ./.github/workflows/deployAppCenter.yml
-        secrets:
-          APP_CENTER_TOKEN_STAGING: ${{ secrets.APP_CENTER_TOKEN_STAGING}}
+    build-android:
+        uses: ./.github/workflows/buildAndroid.yml
+        # secrets:
+        #   ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        #   ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+        #   ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+        #   ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+        #   ANDROID_KEYSTORE_NAME: ${{ secrets.ANDROID_KEYSTORE_NAME }}
+
+    # deploy-app-center:
+    #     needs: [build-ios]
+    #     if: success()
+    #     uses: ./.github/workflows/deployAppCenter.yml
+    #     secrets:
+    #       APP_CENTER_TOKEN_STAGING: ${{ secrets.APP_CENTER_TOKEN_STAGING}}
