--- a/.github/workflows/buildAndroid.yml
+++ b/.github/workflows/buildAndroid.yml
@@ -31,9 +31,9 @@ jobs:
             - name: Install dependencies # install project deps with --frozen-lockfile to make sure we will have the same packages version ( very recommended  on running yarn install on ci)
               run: yarn install --frozen-lockfile
 
-            - name: Grant execute permission for gradlew
-              run: chmod +x gradlew
+            - name: Make Gradlew Executable
+              run: cd android && chmod +x ./gradlew
 
             - name: Build Android
               run: |
-                cd android && ./gradlew bundleRelease --no-daemon
+                ./gradlew bundleRelease --no-daemon
