--- a/.github/workflows/buildAndroid.yml
+++ b/.github/workflows/buildAndroid.yml
@@ -36,4 +36,4 @@ jobs:
 
             - name: Build Android
               run: |
-                ./gradlew bundleRelease --no-daemon
+                cd android && ./gradlew bundleRelease --no-daemon
