--- a/.github/workflows/buildAndroid.yml
+++ b/.github/workflows/buildAndroid.yml
@@ -10,10 +10,12 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v2
 
-            - name: Set up JDK 1.8
-              uses: actions/setup-java@v1
+            - name: Install Java
+              uses: actions/setup-java@v2
               with:
-                  java-version: 1.8
+                java-version: "11"
+                distribution: "adopt"
+                cache: "gradle"
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
