--- a/.github/workflows/buildAndroid.yml
+++ b/.github/workflows/buildAndroid.yml
@@ -3,6 +3,12 @@ name: Build Android
 on:
     workflow_call
 
+env:
+    ARTIFACT_NAME: ${{ 'android_artifact' }}
+    # EXPORT_PATH_STAGING: ${{ 'android/app/build/outputs/bundle/release/app-release.aab' }}
+    EXPORT_PATH_STAGING: ${{ 'android/app/build/outputs/apk/release/' }}
+
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -39,3 +45,13 @@ jobs:
             - name: Build Android
               run: |
                 cd android && ./gradlew bundleRelease --no-daemon
+
+            - name: list files inside android/app/build/outputs/
+              run: ls -R android/app/build/outputs/
+            
+            - name: Upload application
+              uses: actions/upload-artifact@v3
+              with:
+                name: ${{ env.ARTIFACT_NAME }}
+                path: ${{ env.EXPORT_PATH_STAGING }}
+                retention-days: 3
