--- a/.github/workflows/deployAppCenter.yml
+++ b/.github/workflows/deployAppCenter.yml
@@ -13,9 +13,15 @@ env:
     APP_NAME_STAGING: ${{ 'medev-weather-app/ENV_STAGING' }}
     APP_CENTER_TOKEN_STAGING: ${{ secrets.APP_CENTER_TOKEN_STAGING}}
     TESTING_GROUP_STAGING: ${{ 'ENV_STAGING' }}
+    ANDROID_APP_NAME_STAGING: ${{ 'medev-weather-app/ANDROID_ENV_STAGING' }}
+    ANDROID_APP_CENTER_TOKEN_STAGING: ${{ secrets.ANDROID_APP_CENTER_TOKEN_STAGING}}
+    ANDROID_TESTING_GROUP_STAGING: ${{ 'ANDROID_ENV_STAGING' }}
+    ANDROID_ARTIFACT_NAME: ${{ 'android_artifact' }}
+    ANDROID_EXPORT_PATH_STAGING: ${{ 'android/app/build/outputs/bundle/release/' }}
+    ANDROID_UPLOAD_FILE_STAGING: ${{ 'android/app/build/outputs/bundle/release/app-release.aab' }}
 
 jobs:
-    deploy_app_center:
+    deploy_app_center_android:
         name: Deploying to App center
         runs-on: ubuntu-latest
 
@@ -24,11 +30,11 @@ jobs:
         - name: checkout repository
           uses: actions/checkout@v3
           
-        - name: download artifact
+        - name: Download android artifact
           uses: actions/download-artifact@v3
           with:
-            name: ${{ env.ARTIFACT_NAME }}
-            path: ${{ env.EXPORT_PATH_STAGING }}
+            name: ${{ env.ANDROID_ARTIFACT_NAME }}
+            path: ${{ env.ANDROID_EXPORT_PATH_STAGING }}
 
         - name: Display structure of download files
           run: ls
@@ -41,9 +47,42 @@ jobs:
         - name: Upload to App Center STAGING
           uses: wzieba/AppCenter-Github-Action@v1
           with:
-            appName: ${{ env.APP_NAME_STAGING }}
-            token: ${{ env.APP_CENTER_TOKEN_STAGING }}
-            group: ${{ env.TESTING_GROUP_STAGING }}
-            file: ${{ env.UPLOAD_FILE_STAGING }}
+            appName: ${{ env.ANDROID_APP_NAME_STAGING }}
+            token: ${{ env.ANDROID_APP_CENTER_TOKEN_STAGING }}
+            group: ${{ env.ANDROID_TESTING_GROUP_STAGING }}
+            file: ${{ env.ANDROID_UPLOAD_FILE_STAGING }}
             notifyTesters: true
             debug: false
+  
+    # deploy_app_center_ios:
+    #     name: Deploying to App center
+    #     runs-on: ubuntu-latest
+
+    #     steps:
+
+    #     - name: checkout repository
+    #       uses: actions/checkout@v3
+          
+    #     - name: download IOS artifact
+    #       uses: actions/download-artifact@v3
+    #       with:
+    #         name: ${{ env.ARTIFACT_NAME }}
+    #         path: ${{ env.EXPORT_PATH_STAGING }}
+
+    #     - name: Display structure of download files
+    #       run: ls
+            
+    #     - name: set up JDK 1.8
+    #       uses: actions/setup-java@v1
+    #       with:
+    #         java-version: 1.8
+
+    #     - name: Upload to App Center STAGING
+    #       uses: wzieba/AppCenter-Github-Action@v1
+    #       with:
+    #         appName: ${{ env.APP_NAME_STAGING }}
+    #         token: ${{ env.APP_CENTER_TOKEN_STAGING }}
+    #         group: ${{ env.TESTING_GROUP_STAGING }}
+    #         file: ${{ env.UPLOAD_FILE_STAGING }}
+    #         notifyTesters: true
+    #         debug: false
