--- a/.github/workflows/deployAppCenter.yml
+++ b/.github/workflows/deployAppCenter.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
     deploy_app_center_android:
-        name: Deploying to App center
+        name: Deploying Android App to App center
         runs-on: ubuntu-latest
 
         steps:
@@ -56,35 +56,35 @@ jobs:
             notifyTesters: true
             debug: false
   
-    # deploy_app_center_ios:
-    #     name: Deploying to App center
-    #     runs-on: ubuntu-latest
+    deploy_app_center_ios:
+        name: Deploying IOS App to App center
+        runs-on: ubuntu-latest
 
-    #     steps:
+        steps:
 
-    #     - name: checkout repository
-    #       uses: actions/checkout@v3
+        - name: checkout repository
+          uses: actions/checkout@v3
           
-    #     - name: download IOS artifact
-    #       uses: actions/download-artifact@v3
-    #       with:
-    #         name: ${{ env.ARTIFACT_NAME }}
-    #         path: ${{ env.EXPORT_PATH_STAGING }}
+        - name: download IOS artifact
+          uses: actions/download-artifact@v3
+          with:
+            name: ${{ env.ARTIFACT_NAME }}
+            path: ${{ env.EXPORT_PATH_STAGING }}
 
-    #     - name: Display structure of download files
-    #       run: ls
+        - name: Display structure of download files
+          run: ls
             
-    #     - name: set up JDK 1.8
-    #       uses: actions/setup-java@v1
-    #       with:
-    #         java-version: 1.8
+        - name: set up JDK 1.8
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.8
 
-    #     - name: Upload to App Center STAGING
-    #       uses: wzieba/AppCenter-Github-Action@v1
-    #       with:
-    #         appName: ${{ env.APP_NAME_STAGING }}
-    #         token: ${{ env.APP_CENTER_TOKEN_STAGING }}
-    #         group: ${{ env.TESTING_GROUP_STAGING }}
-    #         file: ${{ env.UPLOAD_FILE_STAGING }}
-    #         notifyTesters: true
-    #         debug: false
+        - name: Upload to App Center STAGING
+          uses: wzieba/AppCenter-Github-Action@v1
+          with:
+            appName: ${{ env.APP_NAME_STAGING }}
+            token: ${{ env.APP_CENTER_TOKEN_STAGING }}
+            group: ${{ env.TESTING_GROUP_STAGING }}
+            file: ${{ env.UPLOAD_FILE_STAGING }}
+            notifyTesters: true
+            debug: false
